@@ -4,10 +4,13 @@ history management of subversion.
 
 2015-xx-yy releases/3.12.4
         - fix to use regularized Hessian when doing a curvature test without
-          ineration information (neg_curv_test_tol > 0), new option 
+          ineration information (neg_curv_test_tol > 0), new option
           neg_curv_test_reg to switch back to original behavior
           (by N.-Y. Chang and V. Zavala Tejeda) [r2579]
-        
+        - sIpopt: Added access to sensitivity vector (ds/dp Eq. 9 sIpopt
+	  implementation paper). Also, added an example that show how to
+	  use/access this vectors.
+	  (by Lopez-Negrete, R) [r2581]
 2015-04-15 releases/3.12.3 and releases/3.11.11
         - fixed bug in MA97 interface that lead to conversion issues
           (by J. Hogg) [r2566, #260]
